--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "motion": "^12.34.3",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-icons": "^5.5.0",
     "tailwindcss": "^4.2.0",
     "typewriter-effect": "^2.22.0"
   },
