--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "build": "npm run build:wasm && tsc -b && vite build",
-    "build:wasm": "curl https://rustwasm.github.io/wasm-pack/installer/init.sh -sSf | sh && wasm-pack build --target web",
+    "build:wasm": "curl https://rustwasm.github.io/wasm-pack/installer/init.sh -sSf | sh && wasm-pack build --target web"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.2.0",
