--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "build": "npm run build:wasm && tsc -b && vite build",
-    "build:wasm": "curl https://sh.rustup.rs -sSf | sh -s -- -y && . \"$HOME/.cargo/env\" && rustup target add wasm32-unknown-unknown && curl https://rustwasm.github.io/wasm-pack/installer/init.sh -sSf | sh && wasm-pack build --target web"
+    "build:wasm": "bash build-wasm.sh"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.2.0",
