chore: rename to builders-club

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "building-club"
+name = "builders-club"
 version = "0.1.0"
 authors = ["alifoo <alissonayres.trb@gmail.com>"]
 edition = "2018"
